<resources>
    <string name="app_name">DialysisCenter</string>
    <string name="signIn">Sign In</string>
    <string name="userName">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="rememberMe">Remember Me</string>
    <string name="donthaveAcc">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="alreadyHaveAcc">Already have an account?</string>
    <string name="forgetPass">Forget Password</string>
    <string name="title_activity_admin_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Earnings">Earnings</string>
    <string name="title_euipment">Equipment</string>
    <string name="item_tech">Technicians</string>
    <string name="item_settings">Settings</string>
    <string name="item_logout">Logout</string>
    <string name="pateints">Patients</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="thisMonth">This month</string>
    <string name="dayOfMonth">Monday</string>
    <string name="date">13, Feb 2021 </string>
    <string name="time">18:38</string>
    <string name="pateintId">P-45</string>
    <string name="dumyAmount">4500/-</string>
    <string name="patientName">Patient Name</string>
    <string name="treatment">Treatment</string>
    <string name="others">Others</string>
    <string name="pickStartingTime">Pick starting date</string>
    <string name="endingTime">Pick Ending date</string>
    <string name="visits">Visits</string>
    <string name="dumyNotification">Shahzaib treated P-45 and get 4500/-</string>
    <string name="timeDate">18:38  13 Feb, 2021 </string>
    <string name="quantity">Quantity</string>
    <string name="lblDate">Date</string>
    <string name="add">Add</string>
    <string name="instock">Dialysers in stock</string>
    <string name="addTech">Add technician</string>
    <string name="shareAcc">Share Account</string>
    <string name="createAcc">Create Account</string>
    <string name="techRequests">Tech Applications</string>
    <string name="tvApplicantName">Applicant Name</string>
    <string name="approve">Approve</string>
    <string name="search">Search</string>
    <string name="name">name</string>
    <string name="lblAmount">Fee</string>
    <string name="print">Print Bill</string>
    <string name="history">History</string>
    <string name="previous">Previous</string>
    <string name="Admin">Admin</string>
    <string name="lowStock">Add more stock, few dialysers left</string>
    <string name="errorTextEmpty">Please enter valid data</string>
    <string name="apply">Apply</string>
    <string name="applicationSent">Your Application sent to admin</string>
    <string name="item_patient">Add Patient</string>
    <string name="noRequest">No Requests</string>
    <string name="adminsignIn">Admin Sign in</string>
    <string name="adminLogin">Admin Login</string>
    <string name="addPatient">Add patient</string>
    <string name="panel">Panel</string>
    <string name="injectionPrice">Injection Price</string>
    <string name="lblICUChrges">ICU Charges</string>
    <string name="totalBill">Total Bill     Rs.</string>
    <string name="injection">Injection</string>
    <string name="dialyser">Dialyser</string>
    <string name="bill"> SK Renal Care
    Dialysis center
    07, March 2021
------------------------------
 P-01 Patient name
 Treated by Talha
 ICU Charges		 750/-
 Injection		 750/-
 Fee			 750/-
------------------------------
 Total Bill		 750/-
------------------------------
  Thankyou for visiting us
  For more info +92336 52014444</string>
    <string name="disableBluetooth">Disable Bluetooth</string>
    <string name="scan">Scan for printer</string>
    <string name="invalidData">Invalid data</string>
</resources>