<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_earning">

    <fragment
        android:id="@+id/navigation_earning"
        android:name="com.medical.dialysiscenter.admin.ui.home.EarningsFrag"
        android:label="@string/title_Earnings"
        tools:layout="@layout/fragment_earnings" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.medical.dialysiscenter.admin.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_equipment"
        android:name="com.medical.dialysiscenter.admin.ui.dashboard.EquipmentsFrag"
        android:label="@string/title_euipment"
        tools:layout="@layout/fragment_equipment" />


</navigation>