<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".tech.AddPatient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lytHeaderAP"
        android:weightSum="10"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="4"
            android:id="@+id/titlePatientIdAP"
            android:text="@string/pateintId"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:layout_weight="6"
            android:id="@+id/edtDateAP"
            android:text="@string/timeDate"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/tvErrorAP"
        android:visibility="gone"
        android:layout_below="@+id/lytHeaderAP"
        android:text="@string/errorTextEmpty"
        android:textColor="@color/error"
        android:textSize="13sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/lytPatientnamePT"
        android:layout_below="@+id/tvErrorAP"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:id="@+id/tvNamePatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/patientName"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:id="@+id/edtNameAP"
            android:layout_weight="6"
            android:background="@drawable/edt_field"
            android:hint="@string/name"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/lytICUCharges"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/lytAmountAP"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:id="@+id/tvICUChargesAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/lblICUChrges"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtICUChargesAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:background="@drawable/edt_field"
            android:hint="@string/lblICUChrges"
            android:inputType="number"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:id="@+id/lytAmountAP"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lytPatientnamePT"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:id="@+id/tvAmountAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/lblAmount"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtAmountAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="5"
            android:background="@drawable/edt_field"
            android:hint="@string/lblAmount"
            android:inputType="number"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />


    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:id="@+id/lytCbPanelAP"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lytICUCharges"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:id="@+id/tvPanelAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/injectionPrice"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/edtInjectionAmountAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:background="@drawable/edt_field"
            android:hint="@string/injectionPrice"
            android:inputType="number"
            android:padding="7dp"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/cbxInjectionAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/injection"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>
    <LinearLayout

        android:layout_width="match_parent"
        android:id="@+id/lytTotalBillToPayAP"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lytCbPanelAP"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="4"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:paddingRight="10dp"
            android:gravity="right"
            android:text="@string/totalBill"
            android:textColor="@color/design_default_color_primary"
            android:textSize="15sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingRight="10dp"
            android:id="@+id/tvTotalBillToPayAP"
            android:gravity="right"
            android:text="4500/-"
            android:textColor="@color/design_default_color_primary"
            android:textSize="15sp" />
        <CheckBox
            android:id="@+id/cbxPanelAP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/panel"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lytActionAP"
        android:layout_below="@+id/lytTotalBillToPayAP"
        android:layout_marginTop="5dp"
        android:weightSum="10"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnPrintAP"
            android:layout_weight="5"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:background="@drawable/btn_background"
            android:text="@string/print" />
        <Button
            android:layout_margin="10dp"
            android:id="@+id/btnAddTransactionAP"
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_background"
            android:text="@string/add" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous"
        android:textSize="15sp"
        android:visibility="invisible"
        android:id="@+id/tvhistoryAP"
        android:layout_below="@+id/lytActionAP"
        android:textColor="@color/black"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvhistoryAP"
        android:id="@+id/listPatientHistory"
        android:layout_marginTop="10dp"/>




</RelativeLayout>