<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tech.TechDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="10">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tvTotalPatients"
            android:layout_height="wrap_content"
            android:text="@string/pateints"
            android:layout_weight="9"
            android:textColor="@color/black"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAddPatient"
            android:text="@string/addPatient"
            android:textAllCaps="false"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:padding="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@drawable/edt_field"
            android:hint="@string/search"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:id="@+id/edtSearchPateTech"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/trans"
            android:src="@drawable/ic_search" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listPatientsTechDashboard"
        android:padding="10dp"/>
</LinearLayout>